--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,8 +10,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: update & pr
+      - name: test
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git diff --name-only origin/master | fgrep .rb | xargs -n 1 brew install --build-from-source
+          git diff origin/master --name-only | fgrep .rb \
+          | xargs -n 1 brew install --build-from-source
