--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git fetch origin/master
+          git fetch origin master
           git diff origin/master --name-only | fgrep .rb \
           | xargs -n 1 brew install --build-from-source
