--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -20,6 +20,8 @@ jobs:
       - name: update & pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GIT_AUTHOR_EMAIL: fujiwara.shunichiro+octocat@gmail.com
+          GIT_AUTHOR_NAME: fujiwara
         run: |
           BRANCH=update/$(date +%Y%m%dT%H%M)
           git checkout -b $BRANCH
