--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,4 +20,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ls *.rb | xargs -n 1 brew install --build-from-source
+          ls *.rb | xargs -n 1 brew install --formula --build-from-source
