--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     name: update
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out code
