--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -20,6 +20,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           aqua i
+          aqua version
+          maltmill version
           make update-all
           git diff --exit-code --quiet && exit
           git diff --name-only | xargs -n 1 brew install --formula --build-from-source
