--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -21,7 +21,8 @@ jobs:
         run: |
           aqua i
           aqua version
-          maltmill version
+          grep -l linux *.rb
+          maltmill maprobe.rb
           make update-all
           git diff --exit-code --quiet && exit
           git diff --name-only | xargs -n 1 brew install --formula --build-from-source
