--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           aqua i
           aqua version
+          type xargs
           grep -l linux *.rb
           maltmill maprobe.rb
           make update-all
