--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -18,7 +18,9 @@ jobs:
       - name: install brew
         run: |
           NONINTERACTIVE=1 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-
+          echo >> /home/runner/.bashrc
+          echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> /home/runner/.bashrc
+          eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
       - name: update & pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
