--- a/.github/workflows/diff-test.yml
+++ b/.github/workflows/diff-test.yml
@@ -22,7 +22,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git fetch origin master
-          differs=$(git diff origin/master --name-only | grep -q -F .rb)
+          differs=$(git diff origin/master --name-only | fgrep .rb || true)
           if [ -z "$differs" ]; then
             echo "No changes found."
             exit 0
